--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         "mcamara/laravel-localization": "^2.2",
         "spatie/laravel-sluggable": "*"
     },
+    "require-dev": {
+        
+    },
     "repositories": [
         {
             "type": "path",
@@ -64,5 +67,4 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true
-
 }
